--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -1,4 +1,4 @@
-/* Main site CSS - Imports all modular CSS files */
+/* Home Page CSS - Chỉ import các module cần thiết cho trang chủ */
 
 /* Các biến và thiết lập theme */
 @import './modules/variables.css';
@@ -12,7 +12,7 @@
 /* Components UI */
 @import './modules/components.css';
 
-/* Styles cho manga */
+/* Styles cho manga card */
 @import './modules/manga.css';
 
 /* Navbar */
@@ -25,4 +25,4 @@
 @import './modules/utilities.css';
 
 /* Responsive media queries */
-@import './modules/responsive.css';
+@import './modules/responsive.css'; 
